fix: background overflow when dialog open

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 
-app-root {
+body {
   background: whitesmoke;
 }
 
